# transaction-tracking

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: fcd5d27a8c4c_add_users_table.py  ff06be69836d_add_transactions_table.py
app/: config.py  database.py  main.py
app/api/endpoints/: auth.py  convert.py  transactions.py
app/api/v1/: __init__.py
app/core/: __init__.py  constants.py  dependencies.py  logging.py  middleware.py  security.py
app/models/: __init__.py  transaction.py  user.py
app/schemas/: __init__.py  auth.py  transaction.py
app/services/: currency_converter.py
tests/: conftest.py  test_auth.py  test_currency_converter.py  test_transactions.py  test_user_injection_middleware.py
